[gd_scene load_steps=12 format=1]

[ext_resource path="res://addons/com.indicainkwell.iosdeploy/gui/_v2/deploy_settings_menu.gd" type="Script" id=1]
[ext_resource path="res://addons/com.indicainkwell.iosdeploy/resources/fonts/RobotoCondensed-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://addons/com.indicainkwell.iosdeploy/resources/fonts/Roboto-Light.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://addons/com.indicainkwell.iosdeploy/resources/fonts/Roboto-Bold.ttf" type="DynamicFontData" id=4]


[sub_resource type="DynamicFont" id=1]

font/size = 30
font/use_mipmaps = false
font/use_filter = true
font/font = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]

font/size = 16
font/use_mipmaps = false
font/use_filter = true
font/font = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]

font/size = 16
font/use_mipmaps = false
font/use_filter = true
font/font = ExtResource( 4 )

[sub_resource type="DynamicFont" id=4]

font/size = 16
font/use_mipmaps = false
font/use_filter = true
font/font = ExtResource( 3 )

[sub_resource type="StyleBoxEmpty" id=5]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0

[sub_resource type="GDScript" id=6]

script/source = "tool
extends Tree


var _root = create_item()


func _ready():
	set_hide_root(true)


func _create_device_item():
	var t = create_item(_root)
	t.set_cell_mode(0, t.CELL_MODE_CHECK)
	t.set_editable(0, true)
	return t


func populate(devices):
	for device in devices:
		_create_device_item().set_text(0, device)


func get_active():
	var res = []
	var child = _root.get_children()
	while child != null:
		if child.is_checked(0):
			res.append(child.get_text(0))
		child = child.get_next()
	return res
"

[sub_resource type="DynamicFont" id=7]

font/size = 30
font/use_mipmaps = false
font/use_filter = true
font/font = ExtResource( 3 )

[node name="deploy_settings_menu" type="Panel"]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 3
margin/left = 50.0
margin/top = 50.0
margin/right = 50.0
margin/bottom = 50.0
script/script = ExtResource( 1 )

[node name="content_container" type="MarginContainer" parent="."]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0
custom_constants/margin_right = 50
custom_constants/margin_top = 50
custom_constants/margin_left = 50
custom_constants/margin_bottom = 50

[node name="VBoxContainer" type="VBoxContainer" parent="content_container"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 3
size_flags/vertical = 3
margin/left = 50.0
margin/top = 50.0
margin/right = 874.0
margin/bottom = 450.0
custom_constants/separation = 15
alignment = 0

[node name="title_group" type="VBoxContainer" parent="content_container/VBoxContainer"]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 3
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 824.0
margin/bottom = 59.0
alignment = 0

[node name="HBoxContainer" type="HBoxContainer" parent="content_container/VBoxContainer/title_group"]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 824.0
margin/bottom = 36.0
alignment = 0

[node name="title" type="Label" parent="content_container/VBoxContainer/title_group/HBoxContainer"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 139.0
margin/bottom = 36.0
custom_fonts/font = SubResource( 1 )
text = "IOSDEPLOY"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="subtitle" type="Label" parent="content_container/VBoxContainer/title_group/HBoxContainer"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 143.0
margin/top = 0.0
margin/right = 224.0
margin/bottom = 36.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.379687, 0.369141, 0.421875, 1 )
text = "SETUP"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="information" type="Label" parent="content_container/VBoxContainer/title_group"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 40.0
margin/right = 824.0
margin/bottom = 59.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.379687, 0.369141, 0.421875, 1 )
text = "Required setup before deploying to a device."
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="HSeparator" type="HSeparator" parent="content_container/VBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 74.0
margin/right = 824.0
margin/bottom = 77.0

[node name="identifier_group" type="HBoxContainer" parent="content_container/VBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 92.0
margin/right = 824.0
margin/bottom = 210.0
custom_constants/separation = 30
alignment = 0

[node name="bundle_group" type="VBoxContainer" parent="content_container/VBoxContainer/identifier_group"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 3
size_flags/vertical = 3
margin/left = 0.0
margin/top = 0.0
margin/right = 380.0
margin/bottom = 118.0
alignment = 0

[node name="Label" type="Label" parent="content_container/VBoxContainer/identifier_group/bundle_group"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 380.0
margin/bottom = 19.0
custom_fonts/font = SubResource( 3 )
text = "Bundle"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="bundle_name" type="LineEdit" parent="content_container/VBoxContainer/identifier_group/bundle_group"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 23.0
margin/right = 380.0
margin/bottom = 52.0
custom_fonts/font = SubResource( 4 )
placeholder/text = "Bundle Name"
placeholder/alpha = 0.6
focus_mode = 2
caret/caret_blink = false
caret/caret_blink_speed = 0.65

[node name="bundle_display_name" type="LineEdit" parent="content_container/VBoxContainer/identifier_group/bundle_group"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 56.0
margin/right = 380.0
margin/bottom = 85.0
custom_fonts/font = SubResource( 4 )
placeholder/text = "Bundle Display Name"
placeholder/alpha = 0.6
focus_mode = 2
caret/caret_blink = false
caret/caret_blink_speed = 0.65

[node name="bundle_id" type="LineEdit" parent="content_container/VBoxContainer/identifier_group/bundle_group"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 89.0
margin/right = 380.0
margin/bottom = 118.0
custom_fonts/font = SubResource( 4 )
placeholder/text = "Bundle Id (i.e. com.you.game)"
placeholder/alpha = 0.6
focus_mode = 2
caret/caret_blink = false
caret/caret_blink_speed = 0.65

[node name="VSeparator" type="VSeparator" parent="content_container/VBoxContainer/identifier_group"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 410.0
margin/top = 0.0
margin/right = 413.0
margin/bottom = 118.0

[node name="identity_group" type="VBoxContainer" parent="content_container/VBoxContainer/identifier_group"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 3
size_flags/vertical = 3
margin/left = 443.0
margin/top = 0.0
margin/right = 824.0
margin/bottom = 118.0
alignment = 0

[node name="Label" type="Label" parent="content_container/VBoxContainer/identifier_group/identity_group"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 381.0
margin/bottom = 19.0
custom_fonts/font = SubResource( 3 )
text = "Identity"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="team_name" type="OptionButton" parent="content_container/VBoxContainer/identifier_group/identity_group"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 23.0
margin/right = 381.0
margin/bottom = 48.0
custom_fonts/font = SubResource( 4 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
flat = false
align = 0
selected = -1
items = [  ]

[node name="automanage_profile" type="CheckButton" parent="content_container/VBoxContainer/identifier_group/identity_group"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 52.0
margin/right = 381.0
margin/bottom = 79.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
text = "Automanage Profile"
flat = false
align = 0

[node name="profile_id" type="OptionButton" parent="content_container/VBoxContainer/identifier_group/identity_group"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 83.0
margin/right = 381.0
margin/bottom = 108.0
custom_fonts/font = SubResource( 4 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
flat = false
align = 0
selected = -1
items = [  ]

[node name="HSeparator_1" type="HSeparator" parent="content_container/VBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 225.0
margin/right = 824.0
margin/bottom = 228.0

[node name="devices_group" type="VBoxContainer" parent="content_container/VBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 3
margin/left = 0.0
margin/top = 243.0
margin/right = 824.0
margin/bottom = 400.0
alignment = 0

[node name="Label" type="Label" parent="content_container/VBoxContainer/devices_group"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 824.0
margin/bottom = 19.0
custom_fonts/font = SubResource( 3 )
text = "Deploy to Devices"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="devices_list" type="Tree" parent="content_container/VBoxContainer/devices_group"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 3
margin/left = 0.0
margin/top = 23.0
margin/right = 824.0
margin/bottom = 157.0
custom_styles/bg_focus = SubResource( 5 )
custom_fonts/font = SubResource( 4 )
custom_constants/vseparation = 8
script/script = SubResource( 6 )

[node name="close_button" type="Button" parent="."]

anchor/left = 1
anchor/right = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 40.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 42.0
custom_fonts/font = SubResource( 7 )
custom_colors/font_color = Color( 0.379687, 0.369141, 0.421875, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "x"
flat = true

[connection signal="modal_close" from="." to="." method="_on_deploy_settings_menu_modal_close"]

[connection signal="visibility_changed" from="." to="." method="_on_deploy_settings_menu_visibility_changed"]

[connection signal="pressed" from="close_button" to="." method="hide"]


